# MATLAB

./: .env.example  .gitignore  PRD.md  README.md  mbd_demo.slx  msd_step.m  pyproject.toml  run-demo.ps1
backend/: agent.py  app.py  events.py  instrumented_session.py
docs/: PRD.md  toolboxes.md
docs/issues/: 01-environment-and-demo-slx.md  02-skeleton-mock-mcp.md  03-demo-control-surface.md  04-content-prompts-and-system-prompt.md  05-matlab-live.md  06-figures-inline-lightbox.md  07-simulink-read-simulate.md  08-preflight-script.md  09-teams-polish-branding.md  10-safety-net-rehearsal-recording.md
docs/rehearsal/: README.md  fallback-assets.md  tuned-settings.md
docs/rehearsal/screenshots/: .gitkeep
mock_mcp/: server.py
public/: app.js  index.html  styles.css
scripts/: build_demo_slx.m
tests/: test_instrumented_session.py  test_matlab_live_wiring.py  test_model_selection.py  test_sse_flow.py
